# AzerothClient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
azerothlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bind/: binder.cpp
client/: build.bat  build.md  main.py  main_rc.py  resources.py  resources.qrc
client/widgets/: flatbutton.py  mainwindow.py
lib/: calculator.cpp  calculator.h  mymath.cpp  mymath.h
src/: binder.cpp  mymath.cpp  mymath.h
